Move global filter utils (#168)
Move global filter utils

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>